[package]
name = "totally-incomplete-dns"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib/lib.rs"

[dependencies]
anyhow = "1.0.68"          # error handling
bytes = "1.3.0"            # helps manage buffers
thiserror = "1.0.38"       # error handling
nom = "7.1.3"              # parsing
rand = "0.8.5"             # randomness
byteorder = "1.5.0"
deku = "0.17.0"
